# fastdtoa

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: clang-format.yml  unit-tests.yml
cmake/: Dependencies.cmake  FetchGTest.cmake  Version.cmake  tools.cmake
examples/: CMakeLists.txt  fastdtoa_example.cpp
examples/install/: CMakeLists.txt
src/fastdtoa/: export.hpp  fastdtoa.cpp  fastdtoa.hpp  version.cpp  version.hpp
tests/: CMakeLists.txt  fastdtoa.tests.cpp
